вынесение instance класса в контекст, добавление компонента loading data

--- a/src/components/User/User.module.css
+++ b/src/components/User/User.module.css
@@ -17,6 +17,10 @@
     margin-left: 15px;
 }
 
+.blockBtn {
+    justify-self: left;
+}
+
 .header {
     display: inline-block;
     font-weight: bold;
